--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
         
         <div class="pdf-container">
-            <iframe src="CV.pdf#view=FitH" type="application/pdf" id="pdf-viewer"></iframe>
+            <iframe src="CV.pdf#view=Fit&toolbar=1&navpanes=0&scrollbar=1" type="application/pdf" id="pdf-viewer"></iframe>
             <div class="fallback" id="fallback">
                 <h2>📱 Vista previa no disponible</h2>
                 <p style="margin: 20px 0;">Tu navegador no puede mostrar el PDF directamente.</p>
